ci: fix reports upload

--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
             "@lint:ci",
             "@fmt:test",
             "@refactor:test",
-            "@test",
+            "@test:coverage",
             "@typos"
         ],
         "fix": [
